Added windows, mac and mac-intel compatibility on compiled .jars